--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,8 @@ dependencies:
 
   #Utils
   equatable: any
-  json_serializable: any
   path_provider: any
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -38,6 +38,8 @@ dev_dependencies:
   flutter_lints: any
   retrofit_generator: any
   build_runner: any
+  json_serializable: ^6.9.0
+  freezed: ^2.5.7
 
 flutter:
   uses-material-design: true
